MyDeveloper/src/objects/eCRM_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_of_contacting_eCRM_help__c</fullName>
        <label>Frequency of contacting eCRM help</label>
        <picklist>
            <picklistValues>
                <fullName>Every day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every 2 - 3 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every 2 - 3 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_satisfaction_with_eCRM_help__c</fullName>
        <label>Overall satisfaction with eCRM help</label>
        <picklist>
            <picklistValues>
                <fullName>Very satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Satisfaction_for_most_recent_eCRM_sup__c</fullName>
        <label>Satisfaction for most recent problem</label>
        <picklist>
            <picklistValues>
                <fullName>Very satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_staff_satisfaction_for_problem__c</fullName>
        <label>Support staff satisfaction for problem</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_to_resolve_the_case_by_eCRM_Help__c</fullName>
        <label>Time to resolve the case by eCRM Help</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 5 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 minutes to less than 10 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 minutes to less than 20 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 minutes to less than 30 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 minutes or more</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem did not get resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Waiting_time_over_phone__c</fullName>
        <label>Waiting time over phone</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 minute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 to less than 3 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 to less than 5 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 to less than 10 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 minutes or over</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>eCRM Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>eCRM Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>eCRM Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>